@@ -1,3 +1,7 @@
+2004-06-02  Kentaro Sato <kentaro@ranvis.com>
+
+	* utils/support.[ch]: Implemented subset of stat() for Mac OS.
+
 2004-06-02  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
 
 	* utils/support.h: add things to treat the case of no <sys/stat.h>
